Fixed coco config modules, added enhancements to integration_connector and asset graph widgets etc.
Signed-off-by: Dan Wolfson <dwolfson@users.noreply.github.com>

--- a/examples/Jupyter Notebooks/P-egeria-server-config.ipynb
+++ b/examples/Jupyter Notebooks/P-egeria-server-config.ipynb
@@ -558,7 +558,7 @@
     "    \"SupportedZones\": [\"quarantine\", \"clinical-trials\", \"research\", \"data-lake\", \"trash-can\"]\n",
     "    }\n",
     "\n",
-    "omag_client.configure_access_service(\"asset-catalog\", access_service_options)\n",
+    "# omag_client.configure_access_service(\"asset-catalog\", access_service_options)\n",
     "omag_client.configure_access_service(\"asset-consumer\", access_service_options)\n",
     "\n",
     "access_service_options[\"DefaultZones\"] = [\"quarantine\"]\n",
