Restructured the project to separate out Commands and Dr. Egeria (md_processing) from core pyegeria.
Signed-off-by: Dan Wolfson <dwolfson@users.noreply.github.com>

--- a/examples/Jupyter Notebooks/common/common-functions.ipynb
+++ b/examples/Jupyter Notebooks/common/common-functions.ipynb
@@ -79,7 +79,7 @@
     "# The OMAG Server Platforms host one to many OMAG Servers.  An OMAG Server could be\n",
     "# a metadata server or a specialized governance server.  Its behavior is determined\n",
     "# by a configuration document that defines which OMAG services are activated.\n",
-    "# All OMAG Server Platforms support the administration commands to define a server's\n",
+    "# All OMAG Server Platforms support the administration md_commands to define a server's\n",
     "# configuration document.  It is also possible to create configuration documents\n",
     "# through admin calls to one OMAG Server Platform and then deploy them to the\n",
     "# OMAG Server Platform where they are to run.  In the Egeria hands on lab, the\n",
@@ -559,7 +559,7 @@
     "    issuePostNoBody(url)\n",
     "    \n",
     "#\n",
-    "# These commands are for metadata servers, metadata access points and repository proxies\n",
+    "# These md_commands are for metadata servers, metadata access points and repository proxies\n",
     "\n",
     "def configurePluginMetadataRepository(adminPlatformURL, adminUserId, serverName, repositoryConnectionBody):\n",
     "    adminCommandURLRoot = adminPlatformURL + '/open-metadata/admin-services/users/' + adminUserId + '/servers/'\n",
@@ -642,7 +642,7 @@
     "    issuePost(url, accessServiceOptions)\n",
     "    \n",
     "#\n",
-    "# The commands below are for View Servers only\n",
+    "# The md_commands below are for View Servers only\n",
     "#\n",
     "def configureGovernanceSolutionViewService(adminPlatformURL, adminUserId, viewServerName, viewService, remotePlatformURL,remoteServerName):\n",
     "    adminCommandURLRoot = adminPlatformURL + '/open-metadata/admin-services/users/' + adminUserId + '/servers/'\n",
@@ -662,7 +662,7 @@
     "    issuePost(url, configBody)\n",
     "\n",
     "#\n",
-    "# The commands below are for Integration Daemon OMAG Servers only\n",
+    "# The md_commands below are for Integration Daemon OMAG Servers only\n",
     "#\n",
     "def configureIntegrationService(adminPlatformURL, adminUserId, daemonServerName, mdrServerName, mdrServerPlatform, integrationServiceURLMarker, integrationServiceOptions, connectorConfigs):\n",
     "    adminCommandURLRoot = adminPlatformURL + '/open-metadata/admin-services/users/' + adminUserId + '/servers/'\n",
@@ -690,7 +690,7 @@
     "    issuePost(url, requestBody)\n",
     "\n",
     "#\n",
-    "# The commands below are for Engine Host OMAG Servers only\n",
+    "# The md_commands below are for Engine Host OMAG Servers only\n",
     "#\n",
     "def configureEngineDefinitionServices(adminPlatformURL, adminUserId, engineServerName, mdrServerName, mdrServerPlatform):\n",
     "    adminCommandURLRoot = adminPlatformURL + '/open-metadata/admin-services/users/' + adminUserId + '/servers/'\n",
