--- a/examples/Jupyter Notebooks/common/globals.ipynb
+++ b/examples/Jupyter Notebooks/common/globals.ipynb
@@ -58,7 +58,7 @@
     "# The OMAG Server Platforms host one to many OMAG Servers.  An OMAG Server could be\n",
     "# a metadata server or a specialized governance server.  Its behavior is determined\n",
     "# by a configuration document that defines which OMAG services are activated.\n",
-    "# All OMAG Server Platforms support the administration commands to define a server's\n",
+    "# All OMAG Server Platforms support the administration md_commands to define a server's\n",
     "# configuration document.  It is also possible to create configuration documents\n",
     "# through admin calls to one OMAG Server Platform and then deploy them to the\n",
     "# OMAG Server Platform where they are to run.  In the Egeria hands on lab, the\n",
