A number of changes to display data designer artifacts and implement data designer dr.egeria commands (in progress)
Signed-off-by: Dan Wolfson <dwolfson@users.noreply.github.com>

--- a/examples/Jupyter Notebooks/common/common-functions.ipynb
+++ b/examples/Jupyter Notebooks/common/common-functions.ipynb
@@ -339,7 +339,7 @@
    "metadata": {},
    "source": [
     "# The OMAG Server Platform is a single executable (application) that can be started\n",
-    "# from the command line or a script or as part of a pre-built container environment\n",
+    "# from the object_action line or a script or as part of a pre-built container environment\n",
     "# such as Kubernetes.  The function below checks that a specific\n",
     "# server platform is running.\n",
     "\n",
@@ -1379,7 +1379,7 @@
     "                                    printSchemaTypeDetail(apiOperationIndent, apiOperation, serverName, serverPlatformName, serverPlatformURL, serviceURLMarker, userId, printOrigin)\n",
     "                    else:\n",
     "                        if schemaTypeClass == \"APIOperation\":\n",
-    "                            printStringProperty(propertyIndent, \"API Operation\", schemaType.get('command'))\n",
+    "                            printStringProperty(propertyIndent, \"API Operation\", schemaType.get('object_action'))\n",
     "                            parameterListIndent = propertyIndent + \"    \"\n",
     "                            apiHeader = schemaType.get('headerSchemaType')\n",
     "                            if apiHeader:\n",
